Kommentare korrigiert und gelöschte Codeteile zurückgeholt